[tool.poetry]
package-mode = false
name = "teleadmin"
version = "0.1.0.dev0"
description = "A Telegram-bot for improving the quality of channel promotion"
authors = ["Rasim Eminov <eminov.workspace@yandex.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/l3uraki/Teleadmin/"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"
aiogram = "^3.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"
ruff = "^0.6"

[tool.poetry.group.typing.dependencies]
mypy = "^1.12"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
